# iso-10303

./: .gitignore  Cargo.toml  README.md
examples/family/: family.stp  main.rs  parser.rs  reader.rs
graphs/: ap214.dot  curve.dot
parts/: Cargo.toml  README.md
parts/examples/: ap203_example.stp  ap214_example.stp  read.rs
parts/src/: ap203.rs  ap214.rs  ifc4.rs  lib.rs
schemas/: AP203E2_November_2008.exp  example.exp
src/: lib.rs
src/express/: datatype.rs  declaration.rs  expression.rs  mod.rs  parser.rs  schema.rs
src/step/: mod.rs  parser.rs  reader.rs  real.rs  structure.rs
