[package]
name = "iso-10303"
version = "0.0.0"
authors = ["Junfeng Liu <china.liujunfeng@gmail.com>"]
repository = "https://github.com/J-F-Liu/iso-10303.git"
license = "MIT"
readme = "README.md"
description = "A Rust crate for reading STP files."
categories = ["cad", "parser-implementations"]
keywords = ["stp", "step"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pom = "3.1.0"
structopt = "0.3"
quote ={ version = "1.0", optional = true }
proc-macro2 ={ version = "1.0", optional = true }
rustfmt ={ version =  "0.10", optional = true}
heck = { version = "0.3", optional = true }


[features]
gencode = ["quote", "proc-macro2", "rustfmt", "heck"]

[[bin]]
name = "gencode"
required-features = ["gencode"]